# function-rustlang

./: .cspell.json  .editorconfig  .funcignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  azure.yaml  build.rs  host.json  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  pr.yml
examples/: client.rs
infra/: main.bicep  main.bicepparam
infra/app/: api.bicep
src/: lib.rs  main.rs
